--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -1,55 +1,37 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Dashboard</ion-title><ion-header [translucent]="true">
-      <ion-toolbar>
-        <ion-buttons slot="start">
-          <ion-menu-button></ion-menu-button>
-        </ion-buttons>
-        <ion-title>MyAcquarium</ion-title>
-      </ion-toolbar>
-    </ion-header>
-    
-    <ion-content [fullscreen]="true">
-      <ion-header collapse="condense">
-        <ion-toolbar>
-          
-          <ion-title size="large">prova</ion-title>
-        </ion-toolbar>
-      </ion-header>
-    
-      <div id="container">
-        <strong class="capitalize">prova</strong>
-        
-      </div>
-    </ion-content>
-    
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>MyAcquarium</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  
-      <ion-card>
-        <ion-card-header>
-          <ion-card-subtitle>Benvenuto in MyAcquarium</ion-card-subtitle>
-          
-        </ion-card-header>
-      
-        <ion-card-content>
-          Crea il tuo primo acquario
-        </ion-card-content>
-      </ion-card>
-      <ion-row>
-        <ion-col size="4">
-          
-        </ion-col>
-        <ion-col>
-          <ion-button>Aggiungi
-          <ion-icon size= "large" name="add-outline"></ion-icon></ion-button>
-        </ion-col>
-        <ion-col size="6">
-          
-        </ion-col>
-      </ion-row>
-      
-    
+<ion-content [fullscreen]="true">
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Benvenuto in MyAcquarium</ion-card-subtitle>
+
+    </ion-card-header>
+
+    <ion-card-content>
+      Crea il tuo primo acquario
+    </ion-card-content>
+  </ion-card>
+  <ion-row>
+    <ion-col size="4">
+
+    </ion-col>
+    <ion-col>
+      <ion-button [routerLink]="['/nuovo-acquario']">Aggiungi
+        <ion-icon size="large" name="add-outline"></ion-icon>
+      </ion-button>
+    </ion-col>
+    <ion-col size="6">
+
+    </ion-col>
+  </ion-row>
+
+
 </ion-content>
