--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -8,30 +8,19 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-
   <ion-card>
     <ion-card-header>
       <ion-card-subtitle>Benvenuto in MyAcquarium</ion-card-subtitle>
-
     </ion-card-header>
 
-    <ion-card-content>
-      Crea il tuo primo acquario
-    </ion-card-content>
+    <ion-card-content> Crea il tuo primo acquario </ion-card-content>
   </ion-card>
   <ion-row>
-    <ion-col size="4">
-
-    </ion-col>
-    <ion-col>
-      <ion-button [routerLink]="['/nuovo-acquario']">Aggiungi
+    <ion-col size="12" class="ion-text-center">
+      <ion-button [routerLink]="['/nuovo-acquario']"
+        >Aggiungi
         <ion-icon size="large" name="add-outline"></ion-icon>
       </ion-button>
     </ion-col>
-    <ion-col size="6">
-
-    </ion-col>
   </ion-row>
-
-
 </ion-content>
