--- a/src/app/pages/aggiungi/aggiungi.page.html
+++ b/src/app/pages/aggiungi/aggiungi.page.html
@@ -1,9 +1,34 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Nome Acquario</ion-title>
+    <ion-title class="ion-text-center">Nome Acquario</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="card-background-page">
+
+  <ion-card [routerLink]="['/ricerca']">
+     
+    <img src="assets/img/aggiungi-pesci.jpg"/>
+    <div class="card-title">PESCI</div>
  
+  </ion-card>
+  <ion-card>
+    <img src="assets/img/aggiungi-piante.jpg"/>
+    <div class="card-title">PIANTE</div>
+  </ion-card>
+  <ion-card>
+    <img src="assets/img/aggiungi-accessorio.jpg"/>
+    <div class="card-title">ACCESSORI</div>
+  </ion-card>
+
+  <ion-row>
+    <ion-col size="12" class="ion-text-center">
+      <ion-button [routerLink]="['/dashboard']"
+        >Salva il tuo acquario
+        </ion-button>
+    </ion-col>
+  </ion-row>
+  
+
+
 </ion-content>
