--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -8,6 +8,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-row class="ion-justify-content-center ion-align-items-center">
   <ion-card>
     <ion-card-header>
       <ion-card-subtitle>Benvenuto in MyAcquarium</ion-card-subtitle>
@@ -15,12 +16,19 @@
 
     <ion-card-content> Crea il tuo primo acquario </ion-card-content>
   </ion-card>
-  <ion-row>
-    <ion-col size="12" class="ion-text-center">
-      <ion-button [routerLink]="['/nuovo-acquario']"
-        >Aggiungi
-        <ion-icon size="large" name="add-outline"></ion-icon>
-      </ion-button>
-    </ion-col>
-  </ion-row>
+</ion-row>
+  
 </ion-content>
+
+<ion-footer class="ion-no-border">
+  <ion-toolbar>
+    <ion-row>
+      <ion-col size="12" class="ion-text-center">
+        <ion-button expand="block" [routerLink]="['/nuovo-acquario']"
+          >Aggiungi
+          <ion-icon size="large" name="add-outline"></ion-icon>
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-toolbar>
+</ion-footer>
