--- a/src/app/pages/ricerca/ricerca.page.html
+++ b/src/app/pages/ricerca/ricerca.page.html
@@ -11,5 +11,5 @@
 </ion-header>
 
 <ion-content>
-<app-ricerca-pesce></app-ricerca-pesce>
+  <app-ricerca-pesce *ngIf="appstate.state =='pesci'"></app-ricerca-pesce>
 </ion-content>
