Completata creazione components ricerca-piante/pesci/accessori

--- a/src/app/components/ricerca-piante/ricerca-piante.component.html
+++ b/src/app/components/ricerca-piante/ricerca-piante.component.html
@@ -1,3 +1,6 @@
-<p>
-  ricerca-piante works!
-</p>
+<ion-toolbar>
+    <ion-title class="ion-text-center"> Ricerca Piante</ion-title>
+</ion-toolbar>
+ <ion-searchbar></ion-searchbar>
+ 
+    
