--- a/src/app/pages/selezionepesce/selezionepesce.page.html
+++ b/src/app/pages/selezionepesce/selezionepesce.page.html
@@ -6,6 +6,6 @@
 
 <ion-content>
   
-  <app-scheda-pesce></app-scheda-pesce>
+  <app-scheda-pesce *ngIf="appstate.state == 'pesci'"> </app-scheda-pesce>
   
 </ion-content>
