--- a/src/app/components/scheda-pesce/scheda-pesce.component.html
+++ b/src/app/components/scheda-pesce/scheda-pesce.component.html
@@ -3,26 +3,26 @@
   <ion-card>
     <ion-list>
       <ion-list-header>
-        <ion-label class="ion-text-center">Carassio dorato o pesce rosso</ion-label>
+        <ion-label class="ion-text-center">{{pesce.nome}}</ion-label>
       </ion-list-header>
       
       <ion-list-header><ion-label class="ion-text-center">Classificazione scientifica</ion-label>
      </ion-list-header>
       
       <ion-item>
-        <ion-label>Dominio	Eukaryota</ion-label>
+        <ion-label>Dominio:	{{pesce.dominio}}</ion-label>
       </ion-item>
       <ion-item>
-        <ion-label>Regno	Animalia</ion-label>
+        <ion-label>Regno:	{{pesce.regno}}</ion-label>
       </ion-item>
       <ion-item>
-        <ion-label>Phylum	Chordata</ion-label>
+        <ion-label>Phylum:{{pesce.phylum}}</ion-label>
       </ion-item>
       <ion-item>
-        <ion-label>Classe	Actinopterygii</ion-label>
+        <ion-label>Classe	{{pesce.classe}}</ion-label>
       </ion-item>
       <ion-item>
-        <ion-label>Ordine	Cypriniformes</ion-label>
+        <ion-label>Ordine	{{pesce.ordine}}</ion-label>
       </ion-item>
     </ion-list>
     <ion-list-header>
