cambiato nome della pagina di selezione di un oggetto

--- a/src/app/components/ricerca-pesce/ricerca-pesce.component.html
+++ b/src/app/components/ricerca-pesce/ricerca-pesce.component.html
@@ -5,7 +5,7 @@
   <ion-content>
     <ion-list>
        
-      <ion-item  (click)="onClick(pesce)" [routerLink]="['/selezionepesce']"*ngFor= "let pesce of array_pesci">
+      <ion-item  (click)="onClick(pesce)" [routerLink]="['/selezione-oggetto']"*ngFor= "let pesce of array_pesci">
         {{pesce.nome}}
       </ion-item>
       
