--- a/src/app/components/scheda-piante/scheda-piante.component.html
+++ b/src/app/components/scheda-piante/scheda-piante.component.html
@@ -3,29 +3,19 @@
   <ion-card>
     <ion-list>
       <ion-list-header>
-        <ion-label class="ion-text-center">Carassio dorato o pesce rosso</ion-label>
+        <ion-label class="ion-text-center">{{piante.nome}}</ion-label>
       </ion-list-header>
       
       <ion-list-header><ion-label class="ion-text-center">Classificazione scientifica</ion-label>
      </ion-list-header>
       
       <ion-item>
-        <ion-label>Dominio	Eukaryota</ion-label>
+        <ion-label>Nome:	{{piante.nome}}</ion-label>
       </ion-item>
-      <ion-item>
-        <ion-label>Regno	Animalia</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>Phylum	Chordata</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>Classe	Actinopterygii</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>Ordine	Cypriniformes</ion-label>
-      </ion-item>
+      
     </ion-list>
-    <ion-list-header>
+
+    <!-- <ion-list-header>
       <ion-label class="ion-text-center">Nomenclatura trinomiale</ion-label>
 </ion-list-header>
 <ion-item>
@@ -42,7 +32,7 @@
 </ion-item>
 <ion-item>
   <ion-label class="ion-text-center">Ciprino dorato</ion-label>
-</ion-item>
+</ion-item>-->
 <ion-row>
   <ion-col size="12" class="ion-text-center">
     <ion-button [routerLink]="['/aggiungi']"
