Aggiunta ricerca piante

--- a/src/app/components/ricerca-piante/ricerca-piante.component.html
+++ b/src/app/components/ricerca-piante/ricerca-piante.component.html
@@ -6,7 +6,7 @@
  <ion-content>
     <ion-list>
        
-      <ion-item  (click)="onClick(piante)" [routerLink]="['/selezionepiante']"*ngFor= "let piante of array_piante">
+      <ion-item  (click)="onClick(piante)" [routerLink]="['/selezione-oggetto']"*ngFor= "let piante of array_piante">
         {{piante.nome}}
       </ion-item>
       
