--- a/src/app/components/scheda-piante/scheda-piante.component.html
+++ b/src/app/components/scheda-piante/scheda-piante.component.html
@@ -15,7 +15,7 @@
       
     </ion-list>
 
-    <!-- <ion-list-header>
+     <ion-list-header>
       <ion-label class="ion-text-center">Nomenclatura trinomiale</ion-label>
 </ion-list-header>
 <ion-item>
@@ -32,7 +32,7 @@
 </ion-item>
 <ion-item>
   <ion-label class="ion-text-center">Ciprino dorato</ion-label>
-</ion-item>-->
+</ion-item>
 <ion-row>
   <ion-col size="12" class="ion-text-center">
     <ion-button [routerLink]="['/aggiungi']"
