--- a/src/app/pages/selezione-oggetto/selezione-oggetto.page.html
+++ b/src/app/pages/selezione-oggetto/selezione-oggetto.page.html
@@ -12,5 +12,6 @@
   
   <app-scheda-pesce *ngIf="appstate.state == 'pesci'"> </app-scheda-pesce>
   <app-scheda-piante *ngIf="appstate.state == 'piante'"> </app-scheda-piante>
+  <app-scheda-accessori *ngIf="appstate.state == 'accessori'"> </app-scheda-accessori>
 </ion-content>
 
