--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -1,22 +1,26 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="secondary">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>MyAcquarium</ion-title>
-  </ion-toolbar>
+    <ion-title><img src="assets/img/logo1.png" /></ion-title>
+   </ion-toolbar>
+   <ion-card><img src="assets/img/dashboard1.jpg" /></ion-card>
+   
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <div class="container-center">
-    <ion-card class="align-item-center">
+    <ion-card color="danger" class="align-item-center">
       <ion-card-header>
-        <ion-card-subtitle>Benvenuto in MyAcquarium</ion-card-subtitle>
+        <ion-card-subtitle>BENVENUTO IN MYAQUARIUM</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content> Crea il tuo primo acquario </ion-card-content>
     </ion-card>
     <ion-button class="ion-margin" expand="block" [routerLink]="['/nuovo-acquario']">Aggiungi
-        <ion-icon size="large" name="add-outline"></ion-icon>
-      </ion-button>
+      <ion-icon size="large"></ion-icon>
+    </ion-button>
+  
   </div>
+  
 </ion-content>
