--- a/src/app/pages/nuovo-acquario/nuovo-acquario.page.html
+++ b/src/app/pages/nuovo-acquario/nuovo-acquario.page.html
@@ -1,14 +1,14 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="secondary">
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
     
-      <ion-button fill= "clear" slots="icon-only"  slot="end" [routerLink]="['/aggiungi']" > 
+      <ion-button color="dark" fill= "clear" slots="icon-only"  slot="end" [routerLink]="['/aggiungi']" > 
     <ion-icon size="large"  name="checkmark-outline"></ion-icon>
   </ion-button>
 
-    <ion-title class="ion-text-center">Nuovo Acquario</ion-title>
+    <ion-title class="ion-text-center"><img src="assets/img/nuovo-acquario1.png"/></ion-title>
   </ion-toolbar>
 </ion-header>
 
