--- a/src/app/pages/ricerca/ricerca.page.html
+++ b/src/app/pages/ricerca/ricerca.page.html
@@ -12,9 +12,9 @@
 </ion-header>
 
 <ion-content>
-  <app-ricerca-pesce *ngIf="appstate.state =='pesci'"></app-ricerca-pesce> 
-  <app-ricerca-piante *ngIf="appstate.state =='piante'"></app-ricerca-piante> 
-  <app-ricerca-accessori *ngIf="appstate.state =='accessori'"></app-ricerca-accessori> 
+  <app-ricerca-pesce *ngIf="appState.state =='pesci'"></app-ricerca-pesce> 
+  <app-ricerca-piante *ngIf="appState.state =='piante'"></app-ricerca-piante> 
+  <app-ricerca-accessori *ngIf="appState.state =='accessori'"></app-ricerca-accessori> 
 </ion-content>
 
 
