--- a/src/app/pages/aggiungi/aggiungi.page.html
+++ b/src/app/pages/aggiungi/aggiungi.page.html
@@ -14,19 +14,23 @@
     <img src="assets/img/aggiungi-piante.jpg"/>
     <div class="card-title">PIANTE</div>
   </ion-card>
-  <ion-card (click)="onClick('accessori')" [routerLink]="['/ricerca']">
+  <!-- <ion-card (click)="onClick('accessori')" [routerLink]="['/ricerca']">
     <img src="assets/img/aggiungi-accessorio.jpg"/>
     <div class="card-title">ACCESSORI</div>
-  </ion-card>
+  </ion-card> -->
 
-  <ion-row>
-    <ion-col size="12" class="ion-text-center">
-      <ion-button [routerLink]="['/dashboard']"
-        >Salva il tuo acquario
-        </ion-button>
-    </ion-col>
-  </ion-row>
+
   
-
-
 </ion-content>
+
+<ion-footer class="ion-no-border">
+  <ion-toolbar>
+    <ion-row>
+      <ion-col size="12" class="ion-text-center">
+        <ion-button expand="full" [routerLink]="['/dashboard']"
+          >Salva il tuo acquario
+          </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-toolbar>
+</ion-footer>
