Completato servizio ricerca piante

--- a/src/app/components/ricerca-piante/ricerca-piante.component.html
+++ b/src/app/components/ricerca-piante/ricerca-piante.component.html
@@ -21,7 +21,7 @@
     <ion-list>
        
       <ion-item  (click)="onClick(piante)" [routerLink]="['/selezione-oggetto']"*ngFor= "let piante of array_piante">
-        {{piante.commoname}}
+        {{piante.commonname}}
       </ion-item>
       
     </ion-list>
