fix sulla voce di menu e aggiunta la possibilità di ricercare pesci e piante anche dal menu

--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -3,7 +3,10 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title><img src="assets/img/logo1.png" /></ion-title>
+    <ion-title>
+      <!-- <img src="assets/img/logo1.png" /> -->
+      Dashboard
+    </ion-title>
    </ion-toolbar>
    <ion-card><img src="assets/img/dashboard1.jpg" /></ion-card>
    
