--- a/src/app/pages/ricerca/ricerca.page.html
+++ b/src/app/pages/ricerca/ricerca.page.html
@@ -7,14 +7,14 @@
     <ion-icon size="large"  name="checkmark-outline"></ion-icon>
   </ion-button>
   
-   <ion-title class="ion-text-center">Nome Acquario</ion-title>
+   <ion-title class="ion-text-center">Ricerca {{appState.searchState}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <app-ricerca-pesce *ngIf="appState.state =='pesci'"></app-ricerca-pesce> 
-  <app-ricerca-piante *ngIf="appState.state =='piante'"></app-ricerca-piante> 
-  <app-ricerca-accessori *ngIf="appState.state =='accessori'"></app-ricerca-accessori> 
+  <app-ricerca-pesce *ngIf="appState.searchState =='pesci'"></app-ricerca-pesce> 
+  <app-ricerca-piante *ngIf="appState.searchState =='piante'"></app-ricerca-piante> 
+  <app-ricerca-accessori *ngIf="appState.searchState =='accessori'"></app-ricerca-accessori> 
 </ion-content>
 
 
