--- a/src/app/components/ricerca-pesce/ricerca-pesce.component.html
+++ b/src/app/components/ricerca-pesce/ricerca-pesce.component.html
@@ -1,23 +1,36 @@
-<ion-toolbar>
-  <ion-title class="ion-text-center"> Ricerca Pesci</ion-title>
-</ion-toolbar>
-<ion-row>
-  <ion-col>
-    <ion-item>
-      <ion-label position="stacked">Nome pesce</ion-label>
-      <ion-input [(ngModel)]="modelSearch.nomePesce"></ion-input>
-    </ion-item>
-  </ion-col>
-</ion-row>
-<ion-row>
-  <ion-col>
-    <ion-item>
-      <ion-button color="success" (click)="searchPesce()">Success</ion-button>
-    </ion-item>
-  </ion-col>
-</ion-row>
+<form #form="ngForm" (ngSubmit)="processForm(form)" novalidate>
+  <ion-row>
+    <ion-col>
+      <ion-item class="ion-padding-end ion-padding-start">
+        <ion-label position="stacked" [color]="!pesce_commonname.valid && pesce_commonname.touched ? 'danger' : ''">Nome pesce</ion-label>
+        <ion-input placeholder="utilizza il suo nome comune" [(ngModel)]="modelSearch.nomePesce" required="true" minlength="3" #pesce_commonname="ngModel" name="pesce_commonname"></ion-input>
+      </ion-item>
+      <span class="ion-padding" *ngIf="!pesce_commonname.valid && pesce_commonname.touched">
+        <ion-text class="helper-error" color="danger">Inserisci il nome con almeno 3 lettere</ion-text>
+      </span>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>
+      <ion-button class="ion-padding-end ion-padding-start" [disabled]="!form.valid || pesciservice.isLoading" expand="block" type="submit" color="primary"><ion-icon slot="start" name="search-outline"></ion-icon>Cerca</ion-button>
+    </ion-col>
+  </ion-row>
+  <ion-progress-bar *ngIf="pesciservice.isLoading" type="indeterminate"></ion-progress-bar>
+</form>
 
+<ion-item-divider class="from-body"></ion-item-divider>
 <ion-content>
+
+  <!-- messaggio di warning senza risultai -->
+  <ion-card *ngIf="formProcessed && !pesciservice.isLoading && array_pesci.length == 0" color="warning">
+    <ion-card-header>
+      <ion-card-subtitle>
+        Nessun pesce trovato con questo nome
+      </ion-card-subtitle>
+    </ion-card-header>
+  </ion-card>
+
+
   <ion-list>
     <ion-item
       (click)="onClick(pesce)"
