--- a/src/app/pages/ricerca/ricerca.page.html
+++ b/src/app/pages/ricerca/ricerca.page.html
@@ -3,9 +3,9 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-button fill= "clear" slots="icon-only"  slot="end" [routerLink]="['/selezione-oggetto']" > 
-    <ion-icon size="large"  name="checkmark-outline"></ion-icon>
-  </ion-button>
+    <!-- <ion-button fill= "clear" slots="icon-only"  slot="end" [routerLink]="['/selezione-oggetto']" > 
+      <ion-icon size="large"  name="checkmark-outline"></ion-icon>
+    </ion-button> -->
   
    <ion-title class="ion-text-center">Ricerca {{appState.searchState}}</ion-title>
   </ion-toolbar>
