--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,9 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+ion-text.helper-error {
+    margin-top: -20px;
+    font-size: small;
+}
