aggiunta la ricerca delle piante

--- a/src/app/components/ricerca-pesce/ricerca-pesce.component.html
+++ b/src/app/components/ricerca-pesce/ricerca-pesce.component.html
@@ -21,7 +21,7 @@
 <ion-item-divider class="from-body"></ion-item-divider>
 <ion-content>
 
-  <!-- messaggio di warning senza risultai -->
+  <!-- messaggio di warning senza risultati -->
   <ion-card *ngIf="formProcessed && !pesciservice.isLoading && array_pesci.length == 0" color="warning">
     <ion-card-header>
       <ion-card-subtitle>
