--- a/src/app/pages/nuovo-acquario/nuovo-acquario.page.html
+++ b/src/app/pages/nuovo-acquario/nuovo-acquario.page.html
@@ -3,44 +3,74 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    
-      <ion-button color="dark" fill= "clear" slots="icon-only"  slot="end" [routerLink]="['/aggiungi']" > 
-    <ion-icon size="large"  name="checkmark-outline"></ion-icon>
-  </ion-button>
 
-    <ion-title class="ion-text-center"><img src="assets/img/nuovo-acquario1.png"/></ion-title>
+    <ion-title class="ion-text-center"
+      ><img src="assets/img/nuovo-acquario1.png"
+    /></ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-item>
-      <ion-label>Nome</ion-label>
-      <ion-input></ion-input>
-    </ion-item>
-  </ion-list>
-  <ion-list>
-    <ion-item>
-      <ion-label>Capacità</ion-label>
-      <ion-input></ion-input>
-    </ion-item>
-  </ion-list>
-  <ion-list>
-    <ion-item>
-      <ion-label>Tipologia</ion-label>
-      <ion-input></ion-input>
-    </ion-item>
-  </ion-list>
-  <ion-list>
-    <ion-item>
-      <ion-label>Costo</ion-label>
-      <ion-input></ion-input>
-    </ion-item>
-  </ion-list>
-  <ion-list>
-    <ion-item>
-      <ion-label>Note</ion-label>
-      <ion-input></ion-input>
-    </ion-item>
-  </ion-list>
+  <div class="ion-margin">
+    <form #form="ngForm" (ngSubmit)="processForm(form)" novalidate>
+    <ion-list-header>
+      <ion-label>Inserisci i dati del tuo acquario</ion-label>
+      </ion-list-header>
+        <ion-list>
+          <ion-item>
+            <ion-label position="floating">Nome</ion-label>
+            <ion-input [(ngModel)]="model.nome" maxlength="64" name="nome" #nome="ngModel" required></ion-input>
+          </ion-item>
+          <ion-list *ngIf="nome.dirty && nome.errors" lines="none">
+            <ion-text color="danger" class="ion-margin-start ion-margin-end">Questo campo è obbligatorio</ion-text>
+          </ion-list>
+        </ion-list>
+        <ion-list>
+          <ion-item>
+            <ion-label position="floating" type="decimal">Capacità</ion-label>
+            <ion-input [(ngModel)]="model.volume" type="number"  min="0" step="any" name="volume" #volume="ngModel" required></ion-input>
+            <ion-icon name="cube-outline"slot="end" size="small" class="ion-align-self-end"></ion-icon>
+          </ion-item>
+          <ion-list *ngIf="volume.dirty && volume.errors" lines="none">
+            <ion-text color="danger" class="ion-margin-start ion-margin-end">Questo campo è obbligatorio</ion-text>
+          </ion-list>
+        </ion-list>
+        <ion-list>
+          <ion-item>
+            <ion-label position="floating">Tipologia</ion-label>
+            <ion-select interface="popover">
+              <ion-select-option value="dolce">Acqua Dolce</ion-select-option>
+              <ion-select-option value="salata">Acqua Salata</ion-select-option>
+            </ion-select>
+            <ion-icon name="water-outline" slot="end" size="small" class="ion-align-self-end"></ion-icon>
+          </ion-item>
+        </ion-list>
+        <ion-list>
+          <ion-item>
+            <ion-label position="floating">Costo</ion-label>
+            <ion-input type="number" nin="0" step="any" name="costo"></ion-input>
+            <ion-icon name="logo-euro" slot="end" size="small" class="ion-align-self-end"></ion-icon>
+          </ion-item>
+        </ion-list>
+        <ion-list>
+          <ion-item>
+            <ion-label position="floating">Note</ion-label>
+            <ion-textarea [(ngModel)]="model.descrizione" maxlength="280" auto-grow="true" name="descrizione" #descrizione="ngModel"></ion-textarea>
+            <ion-icon name="clipboard-outline" slot="end" size="small" class="ion-align-self-end"></ion-icon>
+          </ion-item>
+        </ion-list>
+      </form>
+    </div>
 </ion-content>
+
+<ion-footer class="ion-no-border">
+  <ion-toolbar>
+    <ion-row>
+      <ion-col size="12" class="ion-text-center">
+        <ion-button expand="full" (click)="processForm(form)"
+          >Salva il tuo acquario e vai avanti
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-toolbar>
+</ion-footer>
