--- a/src/app/pages/gestisci-acquario/gestisci-acquario.page.html
+++ b/src/app/pages/gestisci-acquario/gestisci-acquario.page.html
@@ -73,5 +73,14 @@
       <ion-label>Pianta 5</ion-label>
     </ion-item>
   </ion-list>
-
+  
+  
 </ion-content>
+
+<ion-row>
+  <ion-col size="12" class="ion-text-center">
+    <ion-button expand="full" (click)="processForm(form)"
+      >Salva il tuo acquario 
+    </ion-button>
+  </ion-col>
+</ion-row>
