--- a/src/app/pages/gestisci-acquario/gestisci-acquario.page.html
+++ b/src/app/pages/gestisci-acquario/gestisci-acquario.page.html
@@ -5,8 +5,8 @@
     </ion-buttons>
     <ion-title>Gestisci acquario</ion-title>
     <ion-buttons slot="end">
-      <ion-button>
-        <ion-icon slot="icon-only" name="pencil-outline"></ion-icon>
+      <ion-button [routerLink]="['/nuovo-acquario']">
+        <ion-icon slot="icon-only" name="create-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -15,7 +15,7 @@
 <ion-content>
   <ion-card>
     <ion-card-header>
-      <ion-card-subtitle>Volume: {{acquario.volume}}</ion-card-subtitle>
+      <ion-card-subtitle>Capacità: {{acquario.volume}}</ion-card-subtitle>
       <ion-card-title>{{acquario.nome}}</ion-card-title>
     </ion-card-header>
   
@@ -25,7 +25,7 @@
   </ion-card>
 
   <!-- Segmenti per selezionare la tipologia di oggetti visibili -->
-  <ion-segment #segment scrollable value="pesci">
+  <ion-segment #segment scrollable value="pesci" class="ion-margin-start ion-margin-end">
     <ion-segment-button value="pesci" layout="icon-start">
       <ion-label>Pesci</ion-label>
       <ion-icon name="fish"></ion-icon>
@@ -37,50 +37,26 @@
   </ion-segment>
 
   <!-- Lista dei pesci disponibili per l'acquario -->
-  <ion-list *ngIf="segment.value == 'pesci'" >
-    <ion-item>
-      <ion-label>Pesce 1</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Pesce 2</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Pesce 3</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Pesce 4</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Pesce 5</ion-label>
+  <ion-list *ngIf="segment.value == 'pesci'">
+    <ion-item *ngFor="let pesce of acquario.fishs">
+      <ion-label>Pesce</ion-label>
     </ion-item>
   </ion-list>
 
     <!-- Lista delle piante disponibili per l'acquario -->
   <ion-list *ngIf="segment.value == 'piante'" >
-    <ion-item>
-      <ion-label>Pianta 1</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Pianta 2</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Pianta 3</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Pianta 4</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Pianta 5</ion-label>
+    <ion-item *ngFor="let pianta of acquario.plants">
+      <ion-label>Pianta</ion-label>
     </ion-item>
   </ion-list>
   
   
 </ion-content>
 
-<ion-row>
+<!-- <ion-row>
   <ion-col size="12" class="ion-text-center">
     <ion-button expand="full" (click)="processForm(form)"
       >Salva il tuo acquario 
     </ion-button>
   </ion-col>
-</ion-row>
+</ion-row> -->
