Sistemate foto scheda piante/scheda pesce

--- a/src/app/components/scheda-pesce/scheda-pesce.component.html
+++ b/src/app/components/scheda-pesce/scheda-pesce.component.html
@@ -1,10 +1,16 @@
+<ion-header color="secondary"></ion-header>
 <p>
-  <img src="assets/img/aggiungi-pesci.jpg"/>
+  
+  <img src="assets/img/aggiungi-pesci1.jpg/" >
+
   <ion-card>
     <ion-list>
       <ion-list-header>
+        
         <ion-label class="ion-text-center">{{pesce.nome}}</ion-label>
       </ion-list-header>
+    
+  
       
       <ion-list-header><ion-label class="ion-text-center">Classificazione scientifica</ion-label>
      </ion-list-header>
