--- a/src/app/components/scheda-pesce/scheda-pesce.component.html
+++ b/src/app/components/scheda-pesce/scheda-pesce.component.html
@@ -1,19 +1,20 @@
 <ion-header color="secondary"></ion-header>
 <p>
   
-  <img src="assets/img/aggiungi-pesci1.jpg/" >
+  <ion-slides *ngIf="pesce.fishImages.length>0">
+    <ion-slide-page *ngFor="let fImage of pesce.fishImages" style="width: 100%;padding: 15px;">
+          <img src="{{fImage.url}}" style="border-radius: 10px;">
+    </ion-slide-page>
+  </ion-slides>
 
   <ion-card>
     <ion-list>
       <ion-list-header>
-        
-        <ion-label class="ion-text-center">{{pesce.nome}}</ion-label>
+        <ion-label class="ion-text-center">{{pesce.commonName}}</ion-label>
       </ion-list-header>
-    
-  
-      
+
       <ion-list-header><ion-label class="ion-text-center">Classificazione scientifica</ion-label>
-     </ion-list-header>
+      </ion-list-header>
       
       <ion-item>
         <ion-label>Dominio:	{{pesce.dominio}}</ion-label>
