Ricerca Pesci-Dettaglio Pesce: Aggiunta dei commenti

--- a/src/app/components/ricerca-pesce/ricerca-pesce.component.html
+++ b/src/app/components/ricerca-pesce/ricerca-pesce.component.html
@@ -1,4 +1,6 @@
 <form #form="ngForm" (ngSubmit)="processForm(form)" novalidate>
+
+  <!--CAMPI UTILI PER LA RICERCA-->
   <ion-row>
     <ion-col>
       <ion-item>
@@ -10,17 +12,22 @@
       </span>
     </ion-col>
   </ion-row>
+
+  <!--BUTTON PER AVVIARE LA RICERCA-->
   <ion-row>
     <ion-col>
       <ion-button class="ion-padding-end ion-padding-start" [disabled]="!form.valid || pesciservice.isLoading" expand="block" type="submit" color="primary"><ion-icon slot="start" name="search-outline"></ion-icon>Cerca</ion-button>
     </ion-col>
   </ion-row>
+
+  <!--IMMAGINE DEL CARICAMENTO-->
   <ion-progress-bar *ngIf="pesciservice.isLoading" type="indeterminate"></ion-progress-bar>
 </form>
-<ion-item-divider class="from-body"></ion-item-divider>
-<ion-content>
 
-  <!-- messaggio di warning senza risultati -->
+<ion-item-divider class="from-body"></ion-item-divider>
+
+<ion-content>
+  <!-- MESSAGGIO DI WARNING SENZA RISULTATI -->
   <ion-card *ngIf="formProcessed && !pesciservice.isLoading && array_pesci.length == 0" color="warning">
     <ion-card-header>
       <ion-card-subtitle>
@@ -29,17 +36,18 @@
     </ion-card-header>
   </ion-card>
 
-
+  <!-- LISTA DEI RISULTATI DELLA RICERCA DI UN PESCE-->
   <ion-list>
-
     <ion-item (click)="onClick(pesce)" [routerLink]="['/selezione-oggetto']" *ngFor="let pesce of array_pesci">
       <ion-label>
+        <!-- PARTE IMMAGINE -->
         <div *ngIf="pesce.fishImages.length != 0" style="width: 20%;float:left;">
           <img src="{{pesce.fishImages[0].thumbUrl}}" style="width:100%">
         </div>
         <div *ngIf="pesce.fishImages.length == 0" style="width: 20%;float:left;">
           <img src="assets/img/icon-fish.png/" style="width:100%">
         </div>
+        <!-- PARTE TESTO -->
         <div style="width: 80%;padding:0px 5px;float:right">
           <p><small>Nome comune: <b>{{pesce.commonName}}</b></small></p>
           <p><small>Nome scientifico: <b>{{pesce.scientificName}}</b></small></p>
@@ -47,12 +55,6 @@
         </div>
       </ion-label>
     </ion-item>
-
-      <!-- commonname: "Marbled headstander"
-      id: 0
-      origin: "Orinoco and amazon river"
-      originzone: "South America"
-      scientificname: "Abramites hypselonotus"
-      synonimous: "Leporinus hypselonotus, Abramites hypselonotus hypselonotus, Lepor -->
   </ion-list>
+
 </ion-content>
