Aggiunto scroll alla ricerca e alla pagina seleziona oggetti

--- a/src/app/pages/selezione-oggetto/selezione-oggetto.page.html
+++ b/src/app/pages/selezione-oggetto/selezione-oggetto.page.html
@@ -9,6 +9,13 @@
 </ion-header>
 
 <ion-content>
+
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="Loading more data...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
   
   <app-scheda-pesce *ngIf="appstate.searchState == 'pesci'"> </app-scheda-pesce>
   <app-scheda-piante *ngIf="appstate.searchState == 'piante'"> </app-scheda-piante>
