--- a/src/app/pages/ricerca/ricerca.page.html
+++ b/src/app/pages/ricerca/ricerca.page.html
@@ -12,6 +12,13 @@
 </ion-header>
 
 <ion-content>
+  
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="Loading more data...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
   <app-ricerca-pesce *ngIf="appState.searchState =='pesci'"></app-ricerca-pesce> 
   <app-ricerca-piante *ngIf="appState.searchState =='piante'"></app-ricerca-piante> 
   <app-ricerca-accessori *ngIf="appState.searchState =='accessori'"></app-ricerca-accessori> 
